--- a/.env
+++ b/.env
@@ -13,6 +13,8 @@
 # Run "composer dump-env prod" to compile .env files for production use (requires symfony/flex >=1.2).
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
+BASE_URL_API=https://jsonplaceholder.typicode.com
+
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=38b37c32badae7bd971267e5547fa29e
