--- a/config/services.yaml
+++ b/config/services.yaml
@@ -24,3 +24,13 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    App\EventListener\AddAttributeEventListener:
+        tags:
+             - { name: kernel.event_listener, event: kernel.request }
+             - { name: kernel.event_listener, event: kernel.request, method: addAttributeGender, priority: 1 }
+
+    # depuis sf 4.4/5.0
+    App\EventListener\Kernel\:
+        resource: '../src/EventListener/Kernel/*'
+        tags: [kernel.event_listener]
