notifier email (symfony mailer)

--- a/.env
+++ b/.env
@@ -41,5 +41,5 @@ DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+MAILER_DSN=smtp://localhost:2500
 ###< symfony/mailer ###
