--- a/.env
+++ b/.env
@@ -43,3 +43,8 @@ DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 ###> symfony/mailer ###
 MAILER_DSN=smtp://localhost:2500
 ###< symfony/mailer ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+# MAILER_DSN=gmail://offroadbiketeam.dev@gmail.com:offroadpassword@default
+###< symfony/google-mailer ###
