--- a/config/services.yaml
+++ b/config/services.yaml
@@ -13,6 +13,7 @@ services:
         bind:
             $baseUrlApi: "%env(BASE_URL_API)%"
             $translationDirectory: "%translator.default_path%"
+            $publicDirectory: "%kernel.project_dir%/public"
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
