--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -3,6 +3,7 @@ twig:
     form_themes:
         - 'bootstrap_5_layout.html.twig'
         - 'form/custom_file_type.html.twig'
+        - 'form/custom_form_type.html.twig'
     paths:
         '%kernel.project_dir%/public/email/css': email_css
         '%kernel.project_dir%/public/email/images': email_image
