--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,8 @@
 #index:
 #    path: /
 #    controller: App\Controller\DefaultController::index
+test_index:
+    path: /test
+    controller: Symfony\Bundle\FrameworkBundle\Controller\TemplateController
+    defaults:
+        template: 'static/test/index.html.twig'
